--- a/package.json
+++ b/package.json
@@ -16,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/dusanmilosavljevic1624/blogger/issues"
   },
-  "homepage": "https://github.com/dusanmilosavljevic1624/blogger#readme"
+  "homepage": "https://github.com/dusanmilosavljevic1624/blogger#readme",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "method-override": "^2.3.6",
+    "mongoose": "^4.5.10",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.0-beta6"
+  }
 }
